homepage-vac/ingress-authentik-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost
    namespace: authentik
spec:
    rules:
        - host: vac.riff.cc
          http:
              paths:
                  - path: /outpost.goauthentik.io
                    pathType: ImplementationSpecific
                    backend:
                        # Or, to use an external Outpost, create an ExternalName service and reference that here.
                        # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
                        service:
                            name: ak-outpost-authentik-embedded-outpost
                            port:
                                number: 9000
